<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".EditEmployeeProfileActivity">

    <!-- Email -->
    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/textfield_border"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Phone Number -->
    <EditText
        android:id="@+id/phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:background="@drawable/textfield_border"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Salary -->
    <EditText
        android:id="@+id/salary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/salary"
        android:inputType="numberDecimal"
        android:background="@drawable/textfield_border"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Position -->
    <EditText
        android:id="@+id/position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/position"
        android:inputType="text"
        android:background="@drawable/textfield_border"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/salary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Save Button -->
    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintMarginTop="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
