<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EmployeeDashboardActivity">

    <!-- Profile Section (Updated Design) -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp">

        <!-- Profile Image (New Image) -->
        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="20dp" />

        <!-- Welcome Text -->
        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_emp"
            android:textColor="@color/purple"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Task Search Section (Updated Position) -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/textfield_border"
        android:drawableStart="@drawable/search_icon"
        android:drawablePadding="8dp"
        android:hint="@string/search_a_task"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <!-- Task Categories Section (Updated Layout) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="3">

        <!-- To Do -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_do"
                android:textAlignment="center" />
        </LinearLayout>

        <!-- In Progress -->

        <!-- Done -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <!-- Today's Tasks Section -->

    <!-- RecyclerView for Today's Tasks -->

    <!-- New Section for Task Info -->
    <TextView
        android:id="@+id/tvCompletedTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed_tasks"
        android:textSize="18sp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/tvProgressRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_rate"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tvRemainingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remaining_time"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />

    <ListView
        android:id="@+id/lvTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="0.5dp"
        android:layout_marginTop="20dp" />

    <ListView
        android:id="@+id/lvNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:layout_marginTop="20dp" />

</androidx.appcompat.widget.LinearLayoutCompat>
